<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_folder_config"
        android:icon="@drawable/ic_folder_outline"
        android:title="@string/source_folder_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/menu_sort_desc"
                android:checkable="true"
                android:title="@string/sort_desc" />

            <group
                android:id="@+id/menu_group_sort"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_sort_manual"
                    android:checkable="true"
                    android:checked="true"
                    android:title="@string/sort_manual" />

                <item
                    android:id="@+id/menu_sort_auto"
                    android:checkable="true"
                    android:title="@string/sort_auto" />

                <item
                    android:id="@+id/menu_sort_name"
                    android:checkable="true"
                    android:title="@string/sort_by_name" />

                <item
                    android:id="@+id/menu_sort_url"
                    android:checkable="true"
                    android:title="@string/sort_by_url" />

                <item
                    android:id="@+id/menu_sort_time"
                    android:checkable="true"
                    android:title="@string/sort_by_lastUpdateTime" />

                <item
                    android:id="@+id/menu_sort_respondTime"
                    android:checkable="true"
                    android:title="@string/sort_by_respondTime" />

                <item
                    android:id="@+id/menu_sort_enable"
                    android:checkable="true"
                    android:title="@string/is_enabled" />

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/menu_group"
        android:icon="@drawable/ic_groups"
        android:title="@string/menu_action_group"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/menu_group_manage"
                android:title="@string/group_manage" />

            <item
                android:id="@+id/menu_enabled_group"
                android:title="@string/enabled" />

            <item
                android:id="@+id/menu_disabled_group"
                android:title="@string/disabled" />

            <item
                android:id="@+id/menu_group_login"
                android:title="@string/need_login" />

            <item
                android:id="@+id/menu_group_null"
                android:title="@string/no_group" />

            <item
                android:id="@+id/menu_enabled_explore_group"
                android:title="@string/enabled_explore" />

            <item
                android:id="@+id/menu_disabled_explore_group"
                android:title="@string/disabled_explore" />

            <item
                android:id="@+id/menu_type"
                android:icon="@drawable/ic_type"
                android:title="@string/source_type">

                <menu>

                    <group
                        android:id="@+id/source_type_book"
                        android:checkableBehavior="single">

                        <item
                            android:id="@+id/menu_type_all"
                            android:checked="true"
                            android:title="@string/all" />

                        <item
                            android:id="@+id/menu_type_0"
                            android:title="@string/type_text" />

                        <item
                            android:id="@+id/menu_type_1"
                            android:title="@string/type_audio" />

                        <item
                            android:id="@+id/menu_type_2"
                            android:title="@string/type_image" />

                        <item
                            android:id="@+id/menu_type_3"
                            android:title="@string/type_file" />

                        <item
                            android:id="@+id/menu_type_4"
                            android:title="@string/type_video" />

                    </group>

                </menu>

            </item>

            <group android:id="@+id/source_group">

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/menu_add_book_source"
        android:icon="@drawable/ic_add"
        android:title="@string/add_book_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_local"
        android:icon="@drawable/ic_import"
        android:title="@string/import_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_onLine"
        android:icon="@drawable/ic_import"
        android:title="@string/import_on_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_qr"
        android:icon="@drawable/ic_import"
        android:title="@string/import_by_qr_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_group_sources_by_domain"
        android:checkable="true"
        android:title="@string/group_sources_by_domain"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_recycle_bin"
        android:icon="@drawable/ic_restore"
        android:title="@string/menu_recycle_bin"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>
