<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_all"
                    android:checked="true"
                    android:title="@string/filter_all" />
                <item
                    android:id="@+id/filter_error"
                    android:title="@string/filter_error" />
                <item
                    android:id="@+id/filter_warn"
                    android:title="@string/filter_warn" />
                <item
                    android:id="@+id/filter_info"
                    android:title="@string/filter_info" />
                <item
                    android:id="@+id/filter_debug"
                    android:title="@string/filter_debug" />
            </group>
        </menu>
    </item>

</menu>
