<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_folder_config"
        android:icon="@drawable/ic_folder_outline"
        android:title="@string/source_folder_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_read_record"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_rss_star"
        android:title="@string/favorite"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_rss_search"
        android:title="@string/rss_search_hint"
        android:icon="@drawable/ic_search_hint"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_group"
        android:title="@string/group"
        android:icon="@drawable/ic_groups"
        app:showAsAction="never">

        <menu />

    </item>

    <item
        android:id="@+id/menu_rss_config"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

</menu>