<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <!-- 收藏（当前文章） -->
    <item
        android:id="@+id/menu_image_star"
        android:icon="@drawable/ic_star_border"
        android:title="@string/favorite"
        app:showAsAction="always"
        tools:visible="true" />

    <!-- 刷新（清缓存重载） -->
    <item
        android:id="@+id/menu_image_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <!-- 浏览器打开原始详情页 -->
    <item
        android:id="@+id/menu_image_browser_open"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <!-- 查看日志 -->
    <item
        android:id="@+id/menu_image_log"
        android:title="@string/log"
        app:showAsAction="never" />

</menu>
