<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ll_sort"
            app:layout_constraintTop_toTopOf="parent">

            <io.legado.app.ui.widget.text.AccentTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:text="@string/view"
                android:textSize="@dimen/text_16sp" />

            <RadioGroup
                android:id="@+id/rg_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_list"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_list_compact"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_grid2"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_grid3"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/folder_view"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/ll_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <io.legado.app.ui.widget.text.AccentTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:text="@string/sort"
                android:textSize="@dimen/text_16sp" />

            <RadioGroup
                android:id="@+id/rg_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_manual"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_name"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_url"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_lastUpdateTime"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_enabled"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

        </LinearLayout>

        <io.legado.app.ui.widget.DetailSeekBar
            android:id="@+id/sb_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_view"
            app:max="60"
            app:title="@string/margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
